--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "next": "14.2.3",
-    "openapi-format": "^1.17.1",
+    "openapi-format": "file:../openapi-format",
     "openapi-types": "^12.1.3",
     "react": "^18",
     "react-dom": "^18"
