--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@monaco-editor/react": "^4.6.0",
     "file-saver": "^2.0.5",
     "next": "14.2.3",
-    "openapi-format": "file:../openapi-format",
+    "openapi-format": "^1.17.2",
     "openapi-types": "^12.1.3",
     "react": "^18",
     "react-dom": "^18"
