--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "file-saver": "^2.0.5",
+    "js-base64": "^3.7.7",
     "next": "14.2.3",
-    "openapi-format": "^1.17.2",
+    "openapi-format": "^1.18.0",
     "openapi-types": "^12.1.3",
+    "pako": "^2.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
