--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.6.0",
+    "@monaco-editor/react": "^4.7.0",
     "file-saver": "^2.0.5",
-    "js-base64": "^3.7.7",
-    "next": "14.2.26",
-    "openapi-format": "^1.27.2",
+    "js-base64": "^3.7.8",
+    "next": "^15.5.3",
+    "openapi-format": "^1.28.0",
     "openapi-types": "^12.1.3",
     "pako": "^2.1.0",
     "react": "^18",
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
-    "@types/pako": "^2.0.3",
+    "@types/pako": "^2.0.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
