--- a/package.json
+++ b/package.json
@@ -4,30 +4,30 @@
   "version": "0.1.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings=0"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "file-saver": "^2.0.5",
     "js-base64": "^3.7.8",
-    "next": "^15.5.4",
-    "openapi-format": "^1.29.0",
+    "next": "^16.0.10",
+    "openapi-format": "^1.29.1",
     "openapi-types": "^12.1.3",
     "pako": "^2.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/pako": "^2.0.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.22",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5"
