--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings=0"
@@ -13,8 +13,8 @@
     "@monaco-editor/react": "^4.7.0",
     "file-saver": "^2.0.5",
     "js-base64": "^3.7.8",
-    "next": "^16.0.10",
-    "openapi-format": "^1.29.1",
+    "next": "^16.1.0",
+    "openapi-format": "^1.29.2",
     "openapi-types": "^12.1.3",
     "pako": "^2.1.0",
     "react": "^19.2.3",
